# ocs

./: Cargo.toml  README.md
ocs-summary/: Cargo.toml
ocs-summary/src/: main.rs
src/: cli.rs  git.rs  lib.rs  main.rs  progress.rs
src/subcommands/: cloc.rs  hotspot.rs  revisions.rs  summary.rs
