workspace = { members = ["ocs-summary"] }
[package]
name = "ocs"
version = "0.1.0"
authors = ["Volker Kempert <volker.kempert@almedso.de>"]
edition = "2021"
description = "Open Code Scene - Analyze a code base inspired by the Book 'Your Code as a Crime Scene' by Adam Tornhill"
license = "MIT"
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.9", features = ["derive", "cargo"] }
env_logger = "0.11.5"
git2 = "0.19.0"
log = "0.4.22"
time = { version = "0.3.36", features = ["parsing", "alloc", "std", "macros"] }
